objects/copado__External_CI_Setting__c.object
<CustomObject>
    <fields>
        <fullName>copado__CI_Tool__c</fullName>
        <label>CI Tool</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>Bamboo</fullName>
                </value>
                <value>
                    <fullName>Team City</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Credential_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credential Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>